--- a/index.html
+++ b/index.html
@@ -1181,6 +1181,129 @@
                 text-shadow: 0 0 30px rgba(66,133,244,0.5);
             }
         }
+
+        .timeline-container8462 {
+            max-width: 100%;
+            margin: 40px auto;
+            padding: 20px;
+            overflow: hidden;
+        }
+
+        .timeline8462 {
+            position: relative;
+            padding: 20px 0;
+        }
+
+        .timeline8462::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(to right, #4285f4, #34a853, #fbbc05, #ea4335);
+            top: 50%;
+            transform: translateY(-50%);
+            animation: timelineGlow 3s infinite;
+        }
+
+        .timeline-track8462 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 20px;
+            padding: 20px 0;
+        }
+
+        .timeline-item8462 {
+            flex: 1;
+            min-width: 200px;
+            position: relative;
+            padding-top: 30px;
+        }
+
+        .timeline-dot8462 {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: #4285f4;
+            border-radius: 50%;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            box-shadow: 0 0 15px rgba(66, 133, 244, 0.5);
+            transition: all 0.3s ease;
+            z-index: 1;
+        }
+
+        .timeline-content8462 {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            padding: 20px;
+            border-radius: 15px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+            text-align: center;
+        }
+
+        .timeline-date8462 {
+            font-family: var(--google-sans);
+            font-weight: 500;
+            color: #fbbc05;
+            font-size: 1.1em;
+            margin-bottom: 10px;
+            text-shadow: 0 0 10px rgba(251, 188, 5, 0.3);
+        }
+
+        .timeline-content8462:hover {
+            transform: translateY(-5px);
+            background: rgba(255, 255, 255, 0.1);
+            border-color: rgba(66, 133, 244, 0.3);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .timeline-content8462 h3 {
+            color: #4285f4;
+            font-family: var(--google-sans);
+            font-size: 1.2em;
+            margin: 10px 0;
+            text-shadow: 0 0 10px rgba(66, 133, 244, 0.3);
+        }
+
+        .timeline-content8462 p {
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.9em;
+            line-height: 1.4;
+        }
+
+        /* Hover effects */
+        .timeline-item8462:hover .timeline-dot8462 {
+            transform: translateX(-50%) scale(1.3);
+            background: #34a853;
+            box-shadow: 0 0 25px rgba(52, 168, 83, 0.7);
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 1024px) {
+            .timeline-track8462 {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .timeline-item8462 {
+                flex: 0 0 calc(33.333% - 20px);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .timeline-item8462 {
+                flex: 0 0 calc(50% - 20px);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .timeline-item8462 {
+                flex: 0 0 100%;
+            }
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -1313,6 +1436,57 @@
                             <div class="title-underline"></div>
                         </div>
 
+                        <!-- Timeline section -->
+                        <div class="timeline-container8462">
+                            <div class="timeline8462">
+                                <div class="timeline-track8462">
+                                    <div class="timeline-item8462" data-aos="fade-right" data-aos-delay="100">
+                                        <div class="timeline-dot8462"></div>
+                                        <div class="timeline-content8462">
+                                            <div class="timeline-date8462">02/2006</div>
+                                            <h3>Gmail for Your Domain</h3>
+                                            <p>Google ra mắt Gmail for Your Domain, cho phép tổ chức sử dụng Gmail với địa chỉ email tùy chỉnh</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline-item8462" data-aos="fade-right" data-aos-delay="200">
+                                        <div class="timeline-dot8462"></div>
+                                        <div class="timeline-content8462">
+                                            <div class="timeline-date8462">28/08/2006</div>
+                                            <h3>Google Apps for Your Domain</h3>
+                                            <p>Mở rộng thành Google Apps for Your Domain, bổ sung Google Calendar, Google Talk, và Google Page Creator</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline-item8462" data-aos="fade-right" data-aos-delay="300">
+                                        <div class="timeline-dot8462"></div>
+                                        <div class="timeline-content8462">
+                                            <div class="timeline-date8462">09/2014</div>
+                                            <h3>Google Apps for Work</h3>
+                                            <p>Đổi tên thành Google Apps for Work và nâng cấp phiên bản giáo dục lên Google Apps Unlimited</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline-item8462" data-aos="fade-right" data-aos-delay="400">
+                                        <div class="timeline-dot8462"></div>
+                                        <div class="timeline-content8462">
+                                            <div class="timeline-date8462">29/09/2016</div>
+                                            <h3>G Suite</h3>
+                                            <p>Google chính thức đổi tên Google Apps for Work thành G Suite</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline-item8462" data-aos="fade-right" data-aos-delay="500">
+                                        <div class="timeline-dot8462"></div>
+                                        <div class="timeline-content8462">
+                                            <div class="timeline-date8462">06/10/2020</div>
+                                            <h3>Google Workspace</h3>
+                                            <p>Đổi tên thành Google Workspace, phản ánh sự tích hợp tốt hơn giữa các công cụ</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
