--- a/index.html
+++ b/index.html
@@ -1949,7 +1949,7 @@
                                     <div class="timeline-item8462" data-aos="fade-right" data-aos-delay="500">
                                         <div class="timeline-dot8462"></div>
                                         <div class="timeline-content8462">
-                                            <div class="timeline-date8462">10/2020 --></div>
+                                            <div class="timeline-date8462">10/2020 đến nay</div>
                                             <h3>Google Workspace</h3>
                                             <p>Đổi tên thành Google Workspace, phản ánh sự tích hợp tốt hơn giữa các
                                                 công cụ hỗ trợ từ xa cho doanh nghiệp</p>
