--- a/index.html
+++ b/index.html
@@ -1925,16 +1925,81 @@
             transition: opacity 0.4s ease;
         }
 
-        .feature-box:hover {
-            transform: translateY(-10px) scale(1.02);
-            border-color: rgba(66, 133, 244, 0.3);
-            box-shadow: 
-                0 20px 40px rgba(0, 0, 0, 0.2),
-                0 0 30px rgba(66, 133, 244, 0.2);
+        .feature-box::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg,
+                rgba(66, 133, 244, 0.15),
+                rgba(52, 168, 83, 0.15),
+                rgba(251, 188, 5, 0.15),
+                rgba(234, 67, 53, 0.15)
+            );
+            opacity: 0;
+        }
+
+        .feature-box.fragment.fade-up.visible {
+            animation: featureBoxAppear 1s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+        }
+
+        .feature-box.fragment.fade-up.visible::after {
+            animation: gradientFadeIn 1s ease forwards;
         }
 
         .feature-box:hover::before {
             opacity: 1;
+        }
+
+        @keyframes gradientFadeIn {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        /* Thêm hiệu ứng pulse cho icons khi feature box xuất hiện */
+        @keyframes iconPulse {
+            0% {
+                transform: scale(0.8);
+                filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.2));
+            }
+            50% {
+                transform: scale(1.1);
+                filter: drop-shadow(0 4px 8px rgba(66, 133, 244, 0.4));
+            }
+            100% {
+                transform: scale(1);
+                filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.2));
+            }
+        }
+
+        .feature-box.fragment.fade-up.visible .app-icon {
+            animation: iconPulse 1.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+        }
+
+        /* Điều chỉnh delay cho từng feature box */
+        .feature-box.fragment.fade-up:nth-child(1) { --delay: 0.1s; }
+        .feature-box.fragment.fade-up:nth-child(2) { --delay: 0.2s; }
+        .feature-box.fragment.fade-up:nth-child(3) { --delay: 0.3s; }
+        .feature-box.fragment.fade-up:nth-child(4) { --delay: 0.4s; }
+        .feature-box.fragment.fade-up:nth-child(5) { --delay: 0.5s; }
+        .feature-box.fragment.fade-up:nth-child(6) { --delay: 0.6s; }
+
+        .feature-box.fragment.fade-up.visible {
+            animation-delay: var(--delay);
+        }
+
+        .feature-box.fragment.fade-up.visible::after {
+            animation-delay: calc(var(--delay) + 0.3s);
+        }
+
+        .feature-box.fragment.fade-up.visible .app-icon {
+            animation-delay: calc(var(--delay) + 0.5s);
         }
 
         .app-icons {
@@ -1946,8 +2011,6 @@
         }
 
         .app-icon {
-            width: 32px;
-            height: 32px;
             transition: all 0.3s ease;
             filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.2));
         }
