--- a/index.html
+++ b/index.html
@@ -1773,7 +1773,7 @@
         .logo-transition8462 {
             transition: all 2s ease-in-out;
             position: fixed;
-            z-index: 99999; /* Tăng z-index để logo luôn hiển thị trên cùng */
+            z-index: 999999999; /* Tăng z-index để logo luôn hiển thị trên cùng */
             width: 380px;
             filter: drop-shadow(0 0 20px rgba(255, 255, 255, 0.2));
             pointer-events: none; /* Ngăn logo can thiệp với các element khác */
@@ -2068,7 +2068,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 9999;
+            z-index: 9999999;
             pointer-events: none;
             visibility: hidden;
         }
