--- a/index.html
+++ b/index.html
@@ -3525,6 +3525,8 @@
     
     <!-- Scripts para cada sección -->
     <script src="advantages.js"></script>
+    <!-- Thêm script access-rights.js -->
+    <script src="access-rights.js"></script>
 </body>
 
 </html>
